# psong

./: .gitignore  CMakeLists.txt  README.md  makelinux.sh  makemac.sh  makeweb.sh  makewin.bat
cmake/: get-sdl2.cmake
src/: CMakeLists.txt  psong.c
